src/test/ui/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0277]: the trait bound `NonConstImpl: ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:25:18
   |
LL |     NonConstImpl.a();
   |                  ^ the trait `ConstDefaultFn` is not implemented for `NonConstImpl`
   |
help: consider introducing a `where` bound, but there might be an alternative better way to express this requirement
   |
LL | const fn test() where NonConstImpl: ConstDefaultFn {
   |                 ++++++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
